Harden internet access setup, add diagnostics, and align Despatch branding

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>U.S. Mail Office</title>
+  <title>Despatch</title>
   <meta name="description" content="Lightweight self-hosted web mail client">
   <link rel="icon" href="data:,">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <div class="app-shell page-office" id="app-shell">
     <header class="topbar">
       <div class="brand">
-        <h1>U.S. Mail Office</h1>
+        <h1>Despatch</h1>
         <div class="pal-and-theme">
           <div class="palette" aria-hidden="true">
             <span class="c-red"></span><span class="c-green"></span><span class="c-navy"></span><span class="c-cyan"></span>
@@ -80,7 +80,7 @@
         <article class="oobe-window" role="region" aria-label="Setup Assistant">
           <header class="oobe-chrome">
             <button id="setup-back-icon" class="oobe-icon-btn" type="button" aria-label="Go to previous step">←</button>
-            <p class="oobe-chrome-title">Mail Office Setup Assistant</p>
+            <p class="oobe-chrome-title">Despatch Setup Assistant</p>
             <button id="setup-close" class="oobe-icon-btn" type="button" aria-label="Cancel setup">×</button>
           </header>
 
@@ -157,7 +157,7 @@
             <div id="setup-step-5" class="oobe-step hidden">
               <div class="oobe-hero-icon" aria-hidden="true">READY</div>
               <h2>Setup Complete</h2>
-              <p>Mail Office is ready. You can open mailbox view now, or go straight to admin controls.</p>
+              <p>Despatch is ready. You can open mailbox view now, or go straight to admin controls.</p>
               <div class="actions">
                 <button id="setup-open-mail" class="cmd-btn cmd-btn--primary" type="button">Open Mail</button>
                 <button id="setup-open-admin" class="cmd-btn" type="button">Open Admin</button>
