Fix OOBE setup failure diagnostics and PAM setup UX

--- a/web/index.html
+++ b/web/index.html
@@ -69,7 +69,7 @@
             <button class="cmd-btn" type="submit">Request Token</button>
           </form>
           <form id="form-reset-confirm" class="stack">
-            <label>Reset Token <input name="token" type="text" required></label>
+            <label>Reset Token <input name="token" type="text" required autocomplete="one-time-code"></label>
             <label>New Password <input name="new_password" type="password" required autocomplete="new-password"></label>
             <button class="cmd-btn" type="submit">Apply New Password</button>
           </form>
