Fix despatch TUI installer issues

--- a/web/oobe-mockup.html
+++ b/web/oobe-mockup.html
@@ -94,6 +94,9 @@
                 <label>Admin Email
                   <input id="mk-email" type="email" value="webmaster@example.com">
                 </label>
+                <label id="mk-mailbox-login-wrap" class="hidden">Mailbox Login (optional)
+                  <input id="mk-mailbox-login" type="text" autocomplete="username" placeholder="e.g. webmaster or system user">
+                </label>
                 <p class="hint">Default is <code>webmaster@{domain}</code>; you can override it.</p>
               </div>
 
