--- a/web/index.html
+++ b/web/index.html
@@ -128,6 +128,9 @@
                 <label>Admin Email
                   <input id="setup-admin-email" type="email" autocomplete="email">
                 </label>
+                <label id="setup-mailbox-login-wrap" class="hidden">Mailbox Login (optional)
+                  <input id="setup-admin-mailbox-login" type="text" autocomplete="username" placeholder="e.g. webmaster or system user">
+                </label>
                 <p class="hint">Default is <code>webmaster@{domain}</code>; you can override it.</p>
               </div>
 
