--- a/web/index.html
+++ b/web/index.html
@@ -238,6 +238,22 @@
         <h2>Admin Console</h2>
         <div class="admin-grid">
           <section>
+            <h3>Software Update</h3>
+            <div class="machine-grid">
+              <div class="metric-label">Current Version</div><div id="update-current-version" class="metric-value">-</div>
+              <div class="metric-label">Current Commit</div><div id="update-current-commit" class="metric-value">-</div>
+              <div class="metric-label">Latest Release</div><div id="update-latest-version" class="metric-value">-</div>
+              <div class="metric-label">Available</div><div id="update-available" class="metric-value">-</div>
+              <div class="metric-label">Last Checked</div><div id="update-last-checked" class="metric-value">-</div>
+              <div class="metric-label">Apply State</div><div id="update-apply-state" class="metric-value">idle</div>
+            </div>
+            <p id="update-note" class="hint">Updates check GitHub Releases and require updater units on Ubuntu.</p>
+            <div class="actions">
+              <button id="btn-update-check" class="cmd-btn" type="button">Check Now</button>
+              <button id="btn-update-apply" class="cmd-btn cmd-btn--primary" type="button">Update Now</button>
+            </div>
+          </section>
+          <section>
             <h3>Pending Registrations</h3>
             <table class="table data-table">
               <thead><tr><th>Email</th><th class="num">Created</th><th>Status</th><th>Action</th></tr></thead>
